--- a/src/index.css
+++ b/src/index.css
@@ -285,3 +285,12 @@
 .animate-on-scroll.delay-300 {
   animation-delay: 0.3s;
 }
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.hide-scrollbar {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
